# uwnet

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Build  CaseName  Dockerfile  Dockerfile.jupyter  LICENSE  Makefile  README  README.md  README.rst  Snakefile  TODO  base-state-dependence-Q1-Q2.ipynb  bin_data.py  bin_plots.py  build_docker.sh  common.py  config.yaml  data.nf  docker-compose.yml  download_fig11_data.py  download_tom_lrfs.py  dumb.txt  environment.yml  fig10-s2.py  fig10.py  fig11.py  figs9-10.ipynb  figure_s3.py  github_deploy_key_nbren12_uwnet.enc  heating_dependence_on_lts_moisture.py  histogram_plots.py  index.html  main.nf  matplotlibrc  notebook.org  paper.ipynb  (+21 more)
.circleci/: config.yml
.dvc/: config
ARM0003/: snd
ARM9707/: cldamount_arm9707.nc  rad  sfc  snd
ASTEX209/: READ.ME  grd  lsf  prm  sfc  snd
BOMEX/: grd.f  grd_100m  grd_mk  grd_sp  grd_superhires  lsf  prm  snd
CONSTRAIN/: constrain_setup_forcing.nc  grd-50  prm  prm.NoSHOC_grd100  snd
Changes_log/: Changes_5_to_6  Changes_6.10.1_to_6.10.2  Changes_6.10.3_to_SAM6.10.4  Changes_6.10.4_to_SAM6.10.5  Changes_6.10.5_to_SAM6.10.6  Changes_6.4_to_6.5  Changes_6.5_to_6.6  Changes_6.6.5_to_6.7.3  Changes_6.6_to_6.6.5  Changes_6.7.3_to_6.7.4  Changes_6.7.4_to_6.7.5  Changes_6.7.5_to_6.8  Changes_6.9.2_to_6.9.3  Changes_6.9.3_to_6.9.4  Changes_6.9.4_6.10  README.UUmods
DOC/: SAM6.10_guide.doc
DYCOMS_RF01/: READ.ME  lsf  sfc  snd
DYCOMS_RF02/: sfc
DYCOMSj/: READ.ME
DYNAMO/: lsf  prm  sfc
GABLS/: READ.ME  grd  prm
GATE/: GATE3h.nc  sfc  snd_avg
GATE_IDEAL/: prm  snd
GCSSARM/: grd  prm  sfc  snd
HeldSuarez/: prm
KWAJEX/: kwajex.nc  lsf3D
LBA/: READ.ME  grd.f  sfc
NG1/: prm.sample
NGAqua/: README.md  snd
NGCalcForcing/: run.sh
RICO/: snd
RUNDATA/: uwnet.tar
S6_CTLmod/: CaseName  S6_CTLd.nc  grd_128_80m_20km  grd_320_20m_4km_20km  lst  prm
SAMbench/: Makefile.debug  Makefile.opt  README  RUNDATA  bench_Nd_check.bash  domain.f90.256x128_8proc  plot_Ndcheck.m  plot_radcheck.m  plot_testsnd.m  plot_testsnd_z.m
SMOKE/: grd  prm
SRC/: MICRO_THOM  boundaries.f90  buoyancy.f90  compress3D.f90  cstuff.c  damping.f90  hbuf_micro_init.f90  hbuf_sgs_init.f90  hbuffer.f90  header.f90  kurant.f90  oceflx.f90  params.f90  periodic.f90  precip_fall.f90  pressure_big.f90.opt  pressz.f90  printout.f90  read_netcdf_3d.f90  readiopdata.f90  setparm.f90  simple_ocean.f90  (+14 more)
(+1345 files in other folders)
