[tool.poetry]
name = "lrf_paper"
version = "0.1.0"
description = "Interpreting the structure of NN parameterizations"
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
numpy = "^1.18.1"
xarray = "^0.15.0"
matplotlib = "^3.1.2"
scipy = "^1.4.1"
toolz = "^0.10.0"
fsspec = "^0.6.2"
requests = "^2.22.0"
intake_xarray = "^0.3.1"
gcsfs = "^0.6.0"
pandas = "~1.0"
altair = "^4.0.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
scikit-learn = "^0.22.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
