[tool.poetry]
name = "uwnet"
version = "0.9.1"
description = "PyTorch training code for climate modeling"
readme = "README.md"
homepage = "https://github.com/nbren12/uwnet"
authors = ["Noah D. Brenowitz <nbren12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.16"
seaborn = "^0.11.0"
dask = ">=1.1"
xarray = ">=0.12"
matplotlib = ">=3.3"
netcdf4 = ">=1.4"
h5netcdf = "^0.8.1"
ipython = "^7.18.1"
jupyterlab = "^2.2.8"
joblib = ">=0.13"
cython = "^0.29.21"
torchvision = "^0.7.0"
torch = ">=1.0"
attrs = "^20.2.0"
scikit-learn = ">=0.20"
sphinx = ">=1.7"
snakemake = "^5.26.1"
zarr = "^2.5.0"
pytest = "^6.1.1"
tqdm = "^4.50.2"
metpy = "^0.12.2"
flake8 = "^3.8.4"
f90nml = "^1.2"
pymongo = "^3.11.0"
click = "^7.1.2"
sacred = "^0.8.1"
recommonmark = "^0.6.0"
pytorch-ignite = "^0.4.2"
sphinx_rtd_theme = "^0.5.0"
toolz = "^0.11.1"
fsspec = "^0.8.3"
altair = "^4.1.0"
altair_saver = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
